--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,19 @@ img {
   height: 10%;
   margin: 10px 10px -10px;
 }
+.card {
+  background-color: #fff;
+  color: #333;
+  border: 1px solid grey;
+  border-radius: 15px;
+  padding: 0px 10px;
+  margin: 20px 25px;
+  position: relative;
+  text-align: center;
+}
+.card:hover {
+  border: solid black 3px;
+}
+.container {
+  text-align: center;
+}
